--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,17 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+	"Logging": {
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"AllowedHosts": "*",
+	
+	"Salt": "SALADA",
+	"TokenAuthentication": {
+		"SecretKey": "Super_Secreta_es_la_clave_de_esta_APP_shhh",
+		"Issuer": "inmobiliariaULP",
+		"Audience": "mobileAPP",
+		"TokenPath": "/api/token",
+		"CookieName": "access_token"
+	}
 }
